<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.miku.ray.widget.UwuPreferenceCategory
        android:key="pref_category_core_settings"
        android:title="@string/title_core_settings"
        app:sectionIcon="@drawable/rmx_settings_line">

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_system_search_eye_line"
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="true"
            android:key="pref_sniffing_enabled"
            android:summary="@string/summary_pref_sniffing_enabled"
            android:title="@string/title_pref_sniffing_enabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_router_line"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="false"
            android:key="pref_route_only_enabled"
            android:summary="@string/summary_pref_route_only_enabled"
            android:title="@string/title_pref_route_only_enabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_router_line"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="true"
            android:key="pref_enable_local_proxy"
            android:summary="@string/summary_pref_enable_local_proxy"
            android:title="@string/title_pref_enable_local_proxy" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_share_line"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="false"
            android:key="pref_proxy_sharing_enabled"
            android:summary="@string/summary_pref_proxy_sharing_enabled"
            android:title="@string/title_pref_proxy_sharing_enabled" />

        <EditTextPreference
            android:icon="@drawable/rmx_hashtag"
            app:dialogIcon="@drawable/rmx_hashtag"
            app:layout="@layout/uwu_mid"
            android:inputType="number"
            android:key="pref_socks_port"
            android:summary="10808"
            android:title="@string/title_pref_socks_port" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_toggle_line"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="false"
            android:key="pref_dynamic_socks_port"
            android:summary="@string/summary_pref_dynamic_socks_port"
            android:title="@string/title_pref_dynamic_socks_port" />

        <EditTextPreference
            android:icon="@drawable/rmx_user_line"
            app:dialogIcon="@drawable/rmx_user_line"
            app:layout="@layout/uwu_mid"
            android:key="pref_socks_username"
            android:summary="@string/summary_pref_socks_username"
            android:title="@string/title_pref_socks_username"
            android:dialogMessage="@string/title_pref_socks_username_tip" />

        <EditTextPreference
            android:icon="@drawable/rmx_lock_line"
            app:dialogIcon="@drawable/rmx_lock_line"
            app:layout="@layout/uwu_mid"
            android:inputType="textPassword"
            android:key="pref_socks_password"
            android:summary="@string/summary_pref_socks_password"
            android:title="@string/title_pref_socks_password"
            android:dialogMessage="@string/title_pref_socks_password_tip" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_toggle_line"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="true"
            android:key="pref_socks_enable_udp"
            android:summary="@string/summary_pref_socks_enable_udp"
            android:title="@string/title_pref_socks_enable_udp" />

        <EditTextPreference
            android:icon="@drawable/rmx_server_line"
            app:dialogIcon="@drawable/rmx_server_line"
            app:layout="@layout/uwu_mid"
            android:key="pref_remote_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_remote_dns"
            android:dialogMessage="@string/title_pref_remote_dns_tip" />

        <EditTextPreference
            android:icon="@drawable/rmx_server_line"
            app:dialogIcon="@drawable/rmx_server_line"
            app:layout="@layout/uwu_mid"
            android:key="pref_domestic_dns"
            android:summary="@string/summary_pref_domestic_dns"
            android:title="@string/title_pref_domestic_dns"
            android:dialogMessage="@string/title_pref_domestic_dns_tip" />

        <EditTextPreference
            android:icon="@drawable/rmx_server_line"
            app:dialogIcon="@drawable/rmx_server_line"
            app:layout="@layout/uwu_mid"
            android:key="pref_dns_hosts"
            android:summary="@string/summary_pref_dns_hosts"
            android:title="@string/title_pref_dns_hosts"
            android:dialogMessage="@string/title_pref_dns_hosts_tip" />

        <ListPreference
            android:icon="@drawable/rmx_file_text_line"
            app:dialogIcon="@drawable/rmx_file_text_line"
            app:layout="@layout/uwu_mid"
            android:defaultValue="warning"
            android:entries="@array/core_loglevel"
            android:entryValues="@array/core_loglevel"
            android:key="pref_core_loglevel"
            android:summary="%s"
            android:title="@string/title_core_loglevel" />

        <ListPreference
            android:icon="@drawable/rmx_global_line"
            app:dialogIcon="@drawable/rmx_global_line"
            app:layout="@layout/uwu_mid"
            android:defaultValue="0"
            android:entries="@array/outbound_domain_resolve_method"
            android:entryValues="@array/outbound_domain_resolve_method_value"
            android:key="pref_outbound_domain_resolve_method"
            android:summary="%s"
            android:title="@string/title_outbound_domain_resolve_method" />

        <ListPreference
            android:icon="@drawable/rmx_download_cloud_2_line"
            app:dialogIcon="@drawable/rmx_download_cloud_2_line"
            app:layout="@layout/uwu_bot"
            android:defaultValue="Loyalsoldier/v2ray-rules-dat"
            android:entries="@array/geo_files_sources_entries"
            android:entryValues="@array/geo_files_sources_values"
            android:key="pref_geo_files_sources"
            android:summary="%s"
            android:title="@string/asset_geo_files_sources"/>

    </com.miku.ray.widget.UwuPreferenceCategory>

</PreferenceScreen>
