<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.miku.ray.ui.preference.BannerSettingsPreference
        android:key="pref_banner_settings_card"
        android:layout="@layout/uwu_banner_settings" />

    <ListPreference
        android:defaultValue="uwu_banner_miku_v6"
        android:entries="@array/banner_settings_character_entries"
        android:entryValues="@array/banner_settings_character_values"
        android:icon="@drawable/rmx_media_gallery_line"
        android:key="pref_banner_settings_character"
        android:summary="@string/summary_banner_settings_character"
        android:title="@string/title_banner_settings_character"
        app:dialogIcon="@drawable/rmx_media_gallery_line"
        app:isPreferenceVisible="false"
        app:layout="@layout/uwu_top" />

    <com.miku.ray.ui.dialog.BannerCharacterLayoutDialog
        android:icon="@drawable/rmx_arrows_expand_diagonal_line"
        android:key="pref_banner_character_layout"
        android:summary="@string/summary_banner_character_layout"
        android:title="@string/title_banner_character_layout"
        app:isPreferenceVisible="false"
        app:layout="@layout/uwu_bot" />

     <Preference
        android:icon="@drawable/rmx_business_verified_badge_line"
        android:layout="@layout/uwu_maintainer"
        android:summary="@string/uwu_maintainer_summary"
        android:title="@string/uwu_maintainer_title"
        app:selectable="false" />

    <Preference
        android:icon="@drawable/rmx_palette_line"
        android:key="pref_navigate_ui_settings"
        android:summary="@string/summary_navigate_ui_settings"
        android:title="@string/title_ui_settings"
        app:layout="@layout/uwu_top" />

    <Preference
        android:icon="@drawable/rmx_system_shield_line"
        android:key="pref_navigate_vpn_settings"
        android:summary="@string/summary_navigate_vpn_settings"
        android:title="@string/title_vpn_settings"
        app:layout="@layout/uwu_mid" />

    <Preference
        android:icon="@drawable/rmx_router_line"
        android:key="pref_navigate_core_settings"
        android:summary="@string/summary_navigate_core_settings"
        android:title="@string/title_core_settings"
        app:layout="@layout/uwu_mid" />

    <Preference
        android:icon="@drawable/rmx_development_git_merge_line"
        android:key="pref_navigate_mux_settings"
        android:summary="@string/summary_navigate_mux_settings"
        android:title="@string/title_mux_settings"
        app:layout="@layout/uwu_mid" />

    <Preference
        android:icon="@drawable/rmx_design_scissors_cut_line"
        android:key="pref_navigate_fragment_settings"
        android:summary="@string/summary_navigate_fragment_settings"
        android:title="@string/title_fragment_settings"
        app:layout="@layout/uwu_mid" />

    <Preference
        android:icon="@drawable/rmx_device_radar_line"
        android:key="pref_navigate_observatory_settings"
        android:summary="@string/summary_navigate_observatory_settings"
        android:title="@string/title_observatory_settings"
        app:layout="@layout/uwu_mid" />

     <Preference
        android:icon="@drawable/rmx_design_tools_line"
        android:key="pref_navigate_advanced_settings"
        android:summary="@string/summary_navigate_advanced_settings"
        android:title="@string/title_advanced"
        app:layout="@layout/uwu_bot" />

</PreferenceScreen>
